# fdf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  author  fdf
includes/: fdf.h  keys.h
minilibx_o/man/man1/: mlx_new_image.1
src/: algorithm  alphabet  ft_atoi_base.c  ft_center_point.c  ft_check_args.c  ft_check_line_points.c  ft_controls.c  ft_coords_to_center.c  ft_create_mem_struct.c  ft_create_t_mlx.c  ft_deal_key.c  ft_do_isometric.c  ft_draw_img_all.c  ft_draw_img_background.c  ft_draw_img_line.c  ft_draw_img_menu.c  ft_draw_img_menu_strings.c  ft_draw_img_wireframe.c  ft_draw_line.c  ft_draw_wireframe.c  ft_error_print.c  ft_fabs.c  ft_fabsf.c  ft_fisbigger.c  ft_fmod.c  ft_img_isometric.c  ft_img_isometric2.c  ft_img_isometric3.c  ft_increase_point_size.c  ft_isometric.c  ft_light_control.c  ft_mouse_move.c  ft_mouse_press.c  ft_mouse_release.c  ft_move_scale.c  ft_move_xy_keys.c  ft_move_z_keys.c  ft_read_points_to_struct.c  ft_scale_points.c  ft_scale_z.c  (+8 more)
test_maps/: 1.fdf  42.fdf  mars.fdf  pylone.fdf  pyramide.fdf
