cmake_minimum_required(VERSION 3.15)
project(fdf C)

set(CMAKE_C_STANDARD 90)

include_directories(.)
include_directories(includes)
include_directories(libft)
include_directories(libft/includes)
include_directories(libft/src)
include_directories(src)
include_directories(minilibx_o)

add_executable(fdf
        includes/fdf.h
        minilibx_o/mlx.h
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/src/ft_abs.c
        libft/src/ft_add_dig_to_int.c
        libft/src/ft_add_specials.c
        libft/src/ft_atoi.c
        libft/src/ft_b.c
        libft/src/ft_buff_finded_percent.c
        libft/src/ft_buff_free.c
        libft/src/ft_buff_no_percent.c
        libft/src/ft_buff_print_free.c
        libft/src/ft_buff_print_n_len.c
        libft/src/ft_buff_treated_percent.c
        libft/src/ft_bzero.c
        libft/src/ft_bzero_buf_n_set_pointers.c
        libft/src/ft_c.c
        libft/src/ft_count_float.c
        libft/src/ft_delnode.c
        libft/src/ft_di.c
        libft/src/ft_dollar_arg.c
        libft/src/ft_dollar_treat.c
        libft/src/ft_error_exit.c
        libft/src/ft_exeption_treat.c
        libft/src/ft_f.c
        libft/src/ft_final_print_n_free_rt_len.c
        libft/src/ft_find_digit.c
        libft/src/ft_find_in_def.c
        libft/src/ft_get_divisional.c
        libft/src/ft_get_integer.c
        libft/src/ft_get_next_line.c
        libft/src/ft_i64toa_base.c
        libft/src/ft_integer_to_str.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isbigger.c
        libft/src/ft_isdigit.c
        libft/src/ft_islower.c
        libft/src/ft_isprint.c
        libft/src/ft_isspace.c
        libft/src/ft_isupper.c
        libft/src/ft_itoa.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstlen.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_num_to_str.c
        libft/src/ft_o.c
        libft/src/ft_p.c
        libft/src/ft_parse_flags.c
        libft/src/ft_parse_spec.c
        libft/src/ft_parsing.c
        libft/src/ft_percent_treat.c
        libft/src/ft_precision_treat.c
        libft/src/ft_printf.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_round_float.c
        libft/src/ft_s.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strcpy_dptp.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnlen.c
        libft/src/ft_strnstr.c
        libft/src/ft_strpcpy.c
        libft/src/ft_strrchr.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_to_pow.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/ft_u.c
        libft/src/ft_u64toa_base.c
        libft/src/ft_width_n_precision.c
        libft/src/ft_width_treat.c
        libft/src/ft_x.c
        libft/src/g_ft_choose_func.c
        src/ft_check_args.c
        src/ft_create_t_mlx.c
        src/ft_draw_line.c
        src/ft_draw_img_line.c
        src/ft_draw_wireframe.c
        src/ft_fisbigger.c
        src/ft_fmod.c
        src/ft_atoi_base.c
        src/main.c
        src/ft_error_print.c
        src/ft_check_line_points.c
        src/ft_increase_point_size.c
        src/ft_write_points.c
        src/ft_isometric.c)
